--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3329,15 +3329,23 @@ span.dot.green i {
     gap: 24px 0;
 }
 
-.Balance__content {background: linear-gradient(45deg, #84C38B, #93CD99);border-radius: 12px;height: 100%;position: relative;color: #fff;padding-top: 35px;padding-left: 44px;}
-
+.Balance__content {
+  background: linear-gradient(120deg, #e9af15eb, #71C27A);
+  border-radius: 12px;
+  height: 100%;
+  position: relative;
+  color: #fff;
+  padding-top: 35px;
+  padding-left: 44px;
+  padding-bottom: 25px;
+}
 .Balance__content a {
     background: #EAB422;
     display: flex;
     align-items: center;
     justify-content: center;
     width: max-content;
-    border-radius: 13px;
+    border-radius: 50px;
     padding: 7px 20px;
     gap: 10px;
     font-size: 20px;
@@ -3346,7 +3354,7 @@ span.dot.green i {
 }
 
 .Balance__content p {
-    margin-bottom: 100px;
+    margin-bottom: 90px;
 }
 
 .Balance__content h1 {
@@ -3359,7 +3367,7 @@ span.dot.green i {
 .Balance__content h5 {
     color: #fff;
     font-weight: 500;
-    margin-bottom: 70px;
+    margin-bottom: 60px;
 }
 .Balance__content .coin {position: absolute;right: 0;top: 50%;transform: translateY(-50%);}
 
